--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:grid="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,18 +16,21 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/undefined_shop" />
 
-    <GridLayout
+    <android.support.v7.widget.GridLayout
         android:id="@+id/shopDetailsGridLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/nameTextView"
         android:layout_above="@+id/servicesPhotosGridLayout"
-        android:columnCount="2"
-        android:useDefaultMargins="true">
+        grid:alignmentMode="alignBounds"
+        grid:columnCount="2"
+        grid:useDefaultMargins="true">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="@string/phone" />
@@ -35,12 +39,16 @@
             android:id="@+id/phoneTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/no_value" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="@string/work_hours" />
@@ -49,12 +57,16 @@
             android:id="@+id/workHoursTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/no_value" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="@string/square" />
@@ -63,12 +75,16 @@
             android:id="@+id/squareTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/no_value" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="@string/opening_date" />
@@ -77,12 +93,16 @@
             android:id="@+id/openingDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/no_value" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="@string/parking_places" />
@@ -91,12 +111,16 @@
             android:id="@+id/parkingPlacesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/no_value" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:text="@string/number_of_cashboxes" />
@@ -105,149 +129,170 @@
             android:id="@+id/numberOfCashboxesTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/no_value" />
 
-    </GridLayout>
+    </android.support.v7.widget.GridLayout>
 
-    <GridLayout
+    <android.support.v7.widget.GridLayout
         android:id="@+id/servicesPhotosGridLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/controlsLinearLayout"
-        android:columnCount="2"
-        android:useDefaultMargins="true">
+        grid:alignmentMode="alignBounds"
+        grid:columnCount="2"
+        grid:useDefaultMargins="true">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal|center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:text="@string/services" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
+        <HorizontalScrollView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            grid:layout_columnWeight="2"
+            grid:layout_gravity="fill_horizontal">
 
-            <ImageView
-                android:id="@+id/serviceClearingSettlementImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_clearing_settlement"
-                android:src="@drawable/service_clearing_settlement" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/serviceCosmeticsImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_cosmetics"
-                android:src="@drawable/service_cosmetics" />
+                <ImageView
+                    android:id="@+id/serviceClearingSettlementImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_clearing_settlement"
+                    android:src="@drawable/service_clearing_settlement" />
 
-            <ImageView
-                android:id="@+id/servicePlaygroundImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_playground"
-                android:src="@drawable/service_playground" />
+                <ImageView
+                    android:id="@+id/serviceCosmeticsImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_cosmetics"
+                    android:src="@drawable/service_cosmetics" />
 
-            <ImageView
-                android:id="@+id/serviceFishIslandImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_fish_island"
-                android:src="@drawable/service_fish_island" />
+                <ImageView
+                    android:id="@+id/servicePlaygroundImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_playground"
+                    android:src="@drawable/service_playground" />
 
-            <ImageView
-                android:id="@+id/serviceBakeryImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_bakery"
-                android:src="@drawable/service_bakery" />
+                <ImageView
+                    android:id="@+id/serviceFishIslandImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_fish_island"
+                    android:src="@drawable/service_fish_island" />
 
-            <ImageView
-                android:id="@+id/serviceCookeryImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_cookery"
-                android:src="@drawable/service_cookery" />
+                <ImageView
+                    android:id="@+id/serviceBakeryImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_bakery"
+                    android:src="@drawable/service_bakery" />
 
-            <ImageView
-                android:id="@+id/serviceTaxiOrderingImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_taxi_ordering"
-                android:src="@drawable/service_taxi_ordering" />
+                <ImageView
+                    android:id="@+id/serviceCookeryImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_cookery"
+                    android:src="@drawable/service_cookery" />
 
-            <ImageView
-                android:id="@+id/servicePharmacyImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_pharmacy"
-                android:src="@drawable/service_pharmacy" />
+                <ImageView
+                    android:id="@+id/serviceTaxiOrderingImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_taxi_ordering"
+                    android:src="@drawable/service_taxi_ordering" />
 
-            <ImageView
-                android:id="@+id/serviceOrderingFoodImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_ordering_food"
-                android:src="@drawable/service_ordering_food" />
+                <ImageView
+                    android:id="@+id/servicePharmacyImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_pharmacy"
+                    android:src="@drawable/service_pharmacy" />
 
-            <ImageView
-                android:id="@+id/serviceDegustationImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_degustation"
-                android:src="@drawable/service_degustation" />
+                <ImageView
+                    android:id="@+id/serviceOrderingFoodImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_ordering_food"
+                    android:src="@drawable/service_ordering_food" />
 
-            <ImageView
-                android:id="@+id/serviceCafeImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_cafe"
-                android:src="@drawable/service_cafe" />
+                <ImageView
+                    android:id="@+id/serviceDegustationImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_degustation"
+                    android:src="@drawable/service_degustation" />
 
-            <ImageView
-                android:id="@+id/serviceGiftCardsImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_gift_cards"
-                android:src="@drawable/service_gift_cards" />
+                <ImageView
+                    android:id="@+id/serviceCafeImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_cafe"
+                    android:src="@drawable/service_cafe" />
 
-            <ImageView
-                android:id="@+id/serviceParkingImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_parking"
-                android:src="@drawable/service_parking" />
+                <ImageView
+                    android:id="@+id/serviceGiftCardsImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_gift_cards"
+                    android:src="@drawable/service_gift_cards" />
 
-            <ImageView
-                android:id="@+id/servicePointOfIssuingOrdersImageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/service_point_of_issuing_orders"
-                android:src="@drawable/service_point_of_issuing_orders" />
+                <ImageView
+                    android:id="@+id/serviceParkingImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_parking"
+                    android:src="@drawable/service_parking" />
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/servicePointOfIssuingOrdersImageView"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:contentDescription="@string/service_point_of_issuing_orders"
+                    android:src="@drawable/service_point_of_issuing_orders" />
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            grid:layout_columnWeight="1"
+            grid:layout_gravity="fill_horizontal|center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_gravity="center_vertical"
             android:textStyle="bold"
             android:text="@string/photos" />
 
-        <LinearLayout
-            android:id="@+id/photosLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
+        <HorizontalScrollView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            grid:layout_columnWeight="2"
+            grid:layout_gravity="fill_horizontal">
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/photosLinearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:orientation="horizontal">
 
-    </GridLayout>
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+    </android.support.v7.widget.GridLayout>
 
     <LinearLayout
         android:id="@+id/controlsLinearLayout"
