--- a/app/src/main/res/layout/activity_select_shop.xml
+++ b/app/src/main/res/layout/activity_select_shop.xml
@@ -30,7 +30,7 @@
 
 
 
-    <android.support.v4.widget.DrawerLayout
+    <ru.okmarket.okgoods.widgets.NoScrollableDrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -65,6 +65,6 @@
 
         </FrameLayout>
 
-    </android.support.v4.widget.DrawerLayout>
+    </ru.okmarket.okgoods.widgets.NoScrollableDrawerLayout>
 
 </LinearLayout>
