--- a/app/src/main/res/layout/fragment_shop_details.xml
+++ b/app/src/main/res/layout/fragment_shop_details.xml
@@ -155,6 +155,7 @@
             android:text="@string/services" />
 
         <HorizontalScrollView
+            android:id="@+id/servicesScrollView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             grid:layout_columnWeight="2"
@@ -277,6 +278,7 @@
             android:text="@string/photos" />
 
         <HorizontalScrollView
+            android:id="@+id/photosScrollView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             grid:layout_columnWeight="2"
